--- a/manifests/lvm-manager.yaml
+++ b/manifests/lvm-manager.yaml
@@ -75,19 +75,6 @@ roleRef:
   name: default:lvm-scheduler
   apiGroup: rbac.authorization.k8s.io
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: ClusterRoleBinding
-metadata:
-  name: default:kube-scheduler
-subjects:
-- kind: ServiceAccount
-  name: lvm-scheduler
-  namespace: default
-roleRef:
-  kind: ClusterRole
-  name: system:kube-scheduler
-  apiGroup: rbac.authorization.k8s.io
----
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
@@ -202,6 +189,12 @@ spec:
         volumeMounts:
         - name: data
           mountPath: /data
+          mountPropagation: Bidirectional
+        - name: dev
+          mountPath: /dev
+          mountPropagation: HostToContainer
+        - name: runlvm
+          mountPath: /run/lvm
         env:
         - name: MY_NODE_NAME
           valueFrom:
@@ -211,6 +204,12 @@ spec:
       - name: data
         hostPath:
           path: /data
+      - name: dev
+        hostPath:
+          path: /dev
+      - name: runlvm
+        hostPath:
+          path: /run/lvm
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
